[gd_scene load_steps=22 format=3 uid="uid://brj557jbtqqwf"]

[ext_resource type="Script" uid="uid://c18m4fac3i6cq" path="res://game.gd" id="1_7jktm"]
[ext_resource type="PackedScene" uid="uid://csjjgtwdqvh3" path="res://player.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://x2kueqcc8vlg" path="res://balls.gd" id="2_e2o6t"]
[ext_resource type="Script" uid="uid://biehdjdy0nkey" path="res://stars.gd" id="2_ryrav"]
[ext_resource type="Texture2D" uid="uid://kncjbfdom16l" path="res://img/blue_circle.png" id="3_fc0e3"]
[ext_resource type="Texture2D" uid="uid://ccx48p1ih4ej7" path="res://img/green_circle.png" id="4_7jktm"]
[ext_resource type="AudioStream" uid="uid://cx50ob7f6nmmj" path="res://sfx/slowdown.wav" id="7_j5wjh"]
[ext_resource type="AudioStream" uid="uid://cbcw0v0l2a27l" path="res://sfx/slowdown_recatch.wav" id="8_vef74"]
[ext_resource type="AudioStream" uid="uid://c5ec0ikt42ig4" path="res://sfx/magnet.wav" id="9_hve3p"]
[ext_resource type="AudioStream" uid="uid://i5kptysqkmsj" path="res://sfx/magnet_recatch.wav" id="10_mfdv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80nbo"]
size = Vector2(1333, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2o6t"]
size = Vector2(1323, 179)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feb5d"]
size = Vector2(154, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0e3"]
size = Vector2(145, 648)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6t"]
bg_color = Color(0.6, 0.6, 0.6, 0.313726)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_e2o6t"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_feb5d"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iotsf"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hve3p"]
bg_color = Color(1, 1, 0, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lc2xo"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfdv2"]
bg_color = Color(1, 1, 1, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game" type="Node2D"]
script = ExtResource("1_7jktm")

[node name="Objects" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Background" type="Node2D" parent="Objects"]

[node name="ColorRect" type="ColorRect" parent="Objects/Background"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Stars" type="Node2D" parent="Objects/Background"]
script = ExtResource("2_ryrav")

[node name="Player" parent="Objects" instance=ExtResource("1_80nbo")]
unique_name_in_owner = true
position = Vector2(150, 300)

[node name="Walls" type="StaticBody2D" parent="Objects"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Walls"]
position = Vector2(571.5, -70.5)
shape = SubResource("RectangleShape2D_80nbo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Objects/Walls"]
position = Vector2(575.5, 737.5)
shape = SubResource("RectangleShape2D_e2o6t")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Objects/Walls"]
position = Vector2(-77, 324)
shape = SubResource("RectangleShape2D_feb5d")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Objects/Walls"]
position = Vector2(1224.5, 324)
shape = SubResource("RectangleShape2D_fc0e3")

[node name="Balls" type="Node2D" parent="Objects"]
unique_name_in_owner = true
script = ExtResource("2_e2o6t")

[node name="StateBar" type="Node2D" parent="Objects"]

[node name="Panel" type="Panel" parent="Objects/StateBar"]
offset_left = 20.0
offset_top = 20.0
offset_right = 491.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_e2o6t")

[node name="LivesLabel" type="Label" parent="Objects/StateBar/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = 3.0
offset_right = 166.0
offset_bottom = 37.0
text = "13143140"
label_settings = SubResource("LabelSettings_e2o6t")
horizontal_alignment = 2

[node name="ScoreLabel" type="Label" parent="Objects/StateBar/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 322.0
offset_top = 3.0
offset_right = 404.0
offset_bottom = 37.0
text = "232525"
label_settings = SubResource("LabelSettings_feb5d")
horizontal_alignment = 2

[node name="BlueCircle" type="Sprite2D" parent="Objects/StateBar/Panel"]
position = Vector2(429, 20)
texture = ExtResource("3_fc0e3")

[node name="GreenCircle" type="Sprite2D" parent="Objects/StateBar/Panel"]
position = Vector2(191, 20)
texture = ExtResource("4_7jktm")

[node name="SlowdownProgressBar" type="ProgressBar" parent="Objects/StateBar"]
unique_name_in_owner = true
offset_left = 513.0
offset_top = 35.0
offset_right = 740.0
offset_bottom = 47.0
theme_override_styles/background = SubResource("StyleBoxFlat_iotsf")
theme_override_styles/fill = SubResource("StyleBoxFlat_hve3p")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="MagnetModeProgressBar" type="ProgressBar" parent="Objects/StateBar"]
unique_name_in_owner = true
offset_left = 762.0
offset_top = 35.0
offset_right = 989.0
offset_bottom = 47.0
theme_override_styles/background = SubResource("StyleBoxFlat_lc2xo")
theme_override_styles/fill = SubResource("StyleBoxFlat_mfdv2")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Sfx" type="Node2D" parent="Objects"]

[node name="SfxSlowdown" type="AudioStreamPlayer" parent="Objects/Sfx"]
unique_name_in_owner = true
stream = ExtResource("7_j5wjh")

[node name="SfxSlowdownRecatch" type="AudioStreamPlayer" parent="Objects/Sfx"]
unique_name_in_owner = true
stream = ExtResource("8_vef74")

[node name="SfxMagnet" type="AudioStreamPlayer" parent="Objects/Sfx"]
unique_name_in_owner = true
stream = ExtResource("9_hve3p")

[node name="SfxMagnetRecatch" type="AudioStreamPlayer" parent="Objects/Sfx"]
unique_name_in_owner = true
stream = ExtResource("10_mfdv2")

[node name="SlowDownTimer" type="Timer" parent="Objects"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="MagnetModeTimer" type="Timer" parent="Objects"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="PauseScreen" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="PauseScreen"]
offset_left = 450.0
offset_top = 273.0
offset_right = 697.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[connection signal="game_magnet_mode_triggered" from="Objects/Player" to="." method="_on_player_game_magnet_mode_triggered"]
[connection signal="game_slow_down_triggered" from="Objects/Player" to="." method="_on_player_game_slow_down_triggered"]
[connection signal="timeout" from="Objects/SlowDownTimer" to="." method="_on_slow_down_timer_timeout"]
[connection signal="timeout" from="Objects/MagnetModeTimer" to="." method="_on_magnet_mode_timer_timeout"]
